Jonathan dicovered the sizing issue fix on the menu (#333)

--- a/pjuu/static/css/style.css
+++ b/pjuu/static/css/style.css
@@ -424,6 +424,7 @@ button:hover {
 }
 
 #header .menu {
+    display: inline-table;
     float: right;
     font-size: 0.85em;
     font-weight: 700;
